@@ -8,8 +8,10 @@ postgresql-common (76) UNRELEASED; urgency=low
     now have complete test coverage of all four PLs that are shipped with the
     core package.
   * t/001_packages.t: Check that postgresql-pltcl-<version> is installed.
+  * PgCommon.pm, get_cluster_socketdir(): Improve error message if data
+    directory parent is not readable. Closes: #428698
 
- -- Martin Pitt <mpitt@debian.org>  Sat, 23 Jun 2007 21:30:37 +0200
+ -- Martin Pitt <mpitt@debian.org>  Sat, 23 Jun 2007 21:50:49 +0200
 
 postgresql-common (75) unstable; urgency=low
 
